Webpage to A4 size

--- a/Castillo_COR.html
+++ b/Castillo_COR.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Try lang</title>
+<title>try try</title>
+<style>
+  body {
+    display: flex;
+    justify-content: center;  /* Horizontal centering */
+    align-items: center;      /* Vertical centering */
+    height: 100vh;            /* Full viewport height */
+    margin: 0;                /* Remove default margins */
+    background-color: gray;
+  }
+
+  div {
+    border: 1px solid black;
+    background-color: white;
+    width: 794px;             /* A4 width */
+    height: 1123px;           /* A4 height */
+    color: black;
+    display: flex;            /* Use flexbox for the div */
+    flex-direction: column;   /* Stack children vertically */
+    justify-content: center;   /* Center content vertically */
+    align-items: center;      /* Center content horizontally */
+    padding: 20px;            /* Add padding for content spacing */
+  }
+</style>
 </head>
 <body>
-
-<h1>This is it</h1>
-<p>chuchu</p>
-
+<div>
+  <h1>GUMANA KA!!!</h1>
+</div>
 </body>
 </html>
-
-
